--- a/main.tex
+++ b/main.tex
@@ -106,17 +106,17 @@
 
 \section{$\nu_e$ Selections}
 \label{sec:nueselection}
-\par This chapter present the three $\nu_e$ selections which comprise the analysis. The chapter starts with the description of common variables and tools leveraged by all $\nu_e$ selections in section~\ref{sec:nueselection:variables}. Next the \npsel (sec.~\ref{sec:nueselection:1eNp}) and \zpsel (sec.~\ref{sec:nueselection:1e0p}) channel selections are presented, starting with a description of where the two selections branch off~\ref{sec:nueselection:inputs}. Finally, the $\nu_e$ inclusive selection is presented in~\ref{sec:nueselection:inclusive}.
+\par This section presents the three $\nu_e$ selections which comprise the analysis. We start with describing the common variables and tools leveraged by all $\nu_e$ selections in section~\ref{sec:nueselection:variables}. Next, the \npsel (sec.~\ref{sec:nueselection:1eNp}) and \zpsel (sec.~\ref{sec:nueselection:1e0p}) channel selections are presented, starting with a description of where the two selections branch off~\ref{sec:nueselection:inputs}. Finally, the $\nu_e$ inclusive selection is presented in~\ref{sec:nueselection:inclusive}.
 
 \subsection{Variable definitions \textcolor{green}{Elena}}
 \label{sec:nueselection:variables}
 \input{NueSelection-Ch5/SelectionNueVar-Ch5}
 \clearpage
 
-\subsection{Input to \npsel and \zpsel and channel orthogonality \textcolor{green}{David + Sophie} }
+\subsection{Input to \npsel and \zpsel and channel orthogonality \textcolor{green}{David + Sophie P.R. Elena} }
 \label{sec:nueselection:inputs}
 
-The 1$e$N$p$ and 1$e$0$p$ selections rely on a common pre-selection which requires the presence of at least one reconstructed and contained EM shower (figure~\ref{fig:nue:presel:nshower}) with reconstructed energy above 70 MeV (figure~\ref{fig:nue:presel:shrenergy}). This second cut applies as a Michel-electron veto, as the majority of events which do not pass this cut are associated to cosmic or $\nu_{\mu}$ induced $\mu \rightarrow e$ Michel electrons. The two selections are subsequently split based on whether a proton candidate is (N$p$) or is not (0$p$) found. Reconstructed tracks (track-shower score $> 0.5$) are defined as proton-candidates if they are fully contained,  have a \texttt{trkpid} score $< 0$, and a value of \texttt{tksh\_angle} $> -0.9$. The second condition requires that the track be proton-like according to the PID tool~\ref{subsec:loglikelihoodpid}, while the third excludes tracks reconstructed back-to-back to the electron candidate, generally due to mis-reconstruction. For events with more than one reconstructed track, these requirements are applied on the longest track.
+The 1$e$N$p$ and 1$e$0$p$ selections rely on a common pre-selection which requires the presence of at least one reconstructed and contained EM shower (figure~\ref{fig:nue:presel:nshower}) with reconstructed energy above 70 MeV (figure~\ref{fig:nue:presel:shrenergy}). This second cut applies as a Michel-electron veto, as the majority of events which do not pass this cut are associated to cosmic or $\nu_{\mu}$ induced $\mu \rightarrow e$ Michel electrons. The two selections are subsequently split: we require the presence of at least one proton candidate for the N$p$ channel and the absence of proton candidates the 0$p$ channel. Reconstructed tracks (track-shower score $> 0.5$) are defined as proton-candidates if they are fully contained,  have a \texttt{trkpid} score $< 0$ \textcolor{blue}{I don;t think we've defined that trackpid<0 is protons, we should in a previous paragraph}, and a value of \texttt{tksh\_angle} $> -0.9$. The second condition requires that the track be proton-like according to the PID tool~\ref{subsec:loglikelihoodpid}, while the third excludes tracks reconstructed back-to-back to the electron candidate, generally due to mis-reconstruction. For events with more than one reconstructed track, these requirements are applied on the longest track.
 
 \begin{figure}[H] 
 \begin{center}
@@ -139,7 +139,8 @@ The 1$e$N$p$ and 1$e$0$p$ selections rely on a common pre-selection which requir
 \end{center}
 \end{figure}
 
-\par The efficiencies of the 1$e$N$p$ and 1$e$0$p$ channels at the point where the selections diverge are shown in figure~\ref{fig:nue:presel:eff}. Efficiencies are presented as a function of true neutrino energy (fig.~\ref{fig:nue:presel:eff:nu}), proton KE (fig.~\ref{fig:nue:presel:eff:proton}), and electron energy (fig.~\ref{fig:nue:presel:eff:elec}). Each plot shows in black the efficiency for the common pre-selection (before a proton requirement is or is not imposed) and is reported relative to all intrinsic $\nu_e$ events. In blue and red respectively are shown the efficiencies for the  1$e$N$p$ and 1$e$0$p$ selections respectively, relative to true N$p$ and 0$p$ events. Shaded histograms in red and blue show the stacked truth-level distributions for N$p$ and 0$p$ events for the variables being plotted. An important observation to make is the fact that at this pre-selection stage the efficiency for 1$e$N$p$ events is significantly lower then that of 1$e$N$p$ events. This is caused by the additional requirement of the presence of a proton-like track in the final state. The strong energy dependence for the efficiency in tagging protons is shown in figure~\ref{fig:nue:presel:eff:proton}. While requiring the presence of a final-state proton lowers the efficiency, this requirement has a significant impact on the selection's ultimate purity.
+\par The efficiencies of the 1$e$N$p$ and 1$e$0$p$ channels at the point where the selections diverge are shown in figure~\ref{fig:nue:presel:eff}. Efficiencies are presented as a function of true neutrino energy (fig.~\ref{fig:nue:presel:eff:nu}), proton KE (fig.~\ref{fig:nue:presel:eff:proton}), and electron energy (fig.~\ref{fig:nue:presel:eff:elec}). Each plot shows in black the efficiency for the common pre-selection (before requirements on protons are imposed) relative to all intrinsic $\nu_e$ events. The efficiencies for the  1$e$N$p$ and 1$e$0$p$ selections relative to true N$p$ and 0$p$ events are shown in blue and red respectively.
+Shaded histograms in red and blue show the stacked truth-level distributions for N$p$ and 0$p$ events for the variables being plotted. It is important to observe that the reconstruction efficiency for 1$e$N$p$ events is significantly lower then that of 1$e$0$p$ events at this pre-selection stage. This is caused by the additional requirement of the presence of a proton-like track in the final state. The strong energy dependence for the efficiency in tagging protons is shown in figure~\ref{fig:nue:presel:eff:proton}. While requiring the presence of a final-state proton lowers the efficiency, this requirement has a significant impact on the selection's ultimate purity.
 
 \begin{figure}[H] 
 \begin{center}
