--- a/main.tex
+++ b/main.tex
@@ -158,7 +158,7 @@ The 1$e$N$p$ and 1$e$0$p$ selections rely on a common pre-selection which requir
     \includegraphics[width=1.00\textwidth]{nueselection/elec_RUN1.pdf}
     \caption{\label{fig:nue:presel:eff:elec} }
     \end{subfigure}
-\caption{\label{fig:nue:presel:eff} $\nu_e$ pre-selection efficiencies split by final-state topology as a function of different truth variables. \textcolor{red}{(update plots to not read ``pre-selection''.)}}
+\caption{\label{fig:nue:presel:eff} $\nu_e$ pre-selection efficiencies split by final-state topology as a function of different truth variables. }
 \end{center}
 \end{figure}
 
@@ -1525,6 +1525,8 @@ A. Furmanski, \emph{Reinteraction systematics}, \href{https://microboone-docdb.f
 M. Ross-Lonergan, \emph{From MiniBooNE data to MicroBooNE LEE sensitivity: A step-by-step review and guide},\href{https://microboone-docdb.fnal.gov/cgi-bin/private/RetrieveFile?docid=20437}{DocDB 20437}
 \bibitem{C} M. Ross-Lonergan, \emph{Technote: Quantifying LEE signals in MicroBooNE through unfolding MiniBooNE MC and Data}. \href{https://microboone-docdb.fnal.gov/cgi-bin/private/ShowDocument?docid=9914}{DocDB 9914}
 
+\bibitem{bib:numuccfilter}
+W. Van De Pontseele, \emph{Muon Neutrino Charged-Current Inclusive Selection and Filter for MCC9 Run1-4}. \href{https://microboone-docdb.fnal.gov/cgi-bin/private/ShowDocument?docid=25589}{DocDB 25589}
 
 \bibitem{bib:CRTPresel_Technote}
 D. Caratelli, et al., \emph{Use of the MicroBooNE Cosmic Ray Tagger for Electron Neutrino Preselection}, \href{https://microboone-docdb.fnal.gov/cgi-bin/private/RetrieveFile?docid=24031&filename=CRTPACTechnote.pdf&version=1}{DocDB 24031}
