--- a/main.tex
+++ b/main.tex
@@ -163,7 +163,7 @@ Shaded histograms in red and blue show the stacked truth-level distributions for
 \end{center}
 \end{figure}
 
-\subsection{\npsel Channel \textcolor{green}{David + Giuseppe}}
+\subsection{\npsel Channel \textcolor{green}{David + Giuseppe ... PR Elena}}
 \label{sec:nueselection:1eNp}
 
 The 1$e$N$p$ channel is the most sensitive to the MiniBooNE eLEE signal as it contains a large fraction of the signal events and allows for selection requirements based both on showers and tracks. Since $\nu_e$ charge-current interactions are O(1\%) in the BNB and a large cosmic background is present, a high-purity selection is needed to achieve a sizeable signal sensitivity; the necessary trade-off is that the final signal efficiency will be low.
@@ -220,9 +220,11 @@ On top of preselection requirements, we define a robust selection based on box c
 We present here cuts in different categories according to the background they primarily suppress; however,  the following description should be regarded as a simplification since some variables are effective against multiple backgrounds.
 
 
-The requirement of a proton-like track is a very effective tool for cosmic rejection: this requirement rejects more than 90\% of the cosmics that pass pre-selection. We aim at rejecting more cosmic-induced events by requiring a large distance of the neutrino vertex from clear cosmic tracks. . The next goal is to suppress events from $\nu_\mu$ charged current interactions, so for this purpose we require shower hits to be the dominant in the slice, as well as imposing tight quality requirements on the shower object. They rely on several variables aiming at separating electron or photon showers from single-particle tracks, i.e. shr\_score, shrmoliereavg, trkfit, subcluster. 
+The requirement of a proton-like track is a very effective tool for cosmic rejection: this requirement rejects more than 90\% of the cosmics that pass pre-selection. We aim at rejecting more cosmic-induced events by requiring a large distance of the neutrino vertex from clear cosmic tracks. 
 
-At this stage most of the selected events contain neutrino-induced electromagnetic activity. The main background are $\pi^0$ events and we reject them with a series of requirements based on the different topology and energy deposition of electrons and photons. We first require only one shower-like PFParticle in the event, and that its start point is at a short distance from the track start. Then, we require that the energy loss at the start of the electron shower is be compatible with a single MIP. Many possible dEdx variable definitions are possible, and information from all TPC planes can be used. However, due to detector and reconstruction limitations, there is not a single definition that provides a sharp separation between electrons and photons; therefore, in order to obtain a good background rejection without large efficiency losses, we choose to apply a loose MIP cut on two different dEdx definitions (described in Sec.~\ref{sec:nueselection:variables}). The loose MIP requirement enforces that there is at least one hit in the collection plane in the probed range, and that the dEdx is not consistent with two or more MIPs in any plane. Finally, the single shower requirement is reinforced with a 2nd shower veto based on clusters in the collection plane that are not matched to any PFParticle.
+The next goal is to suppress events from $\nu_\mu$ charged current interactions; for this purpose, we impose tight quality requirements on the shower object and we require the shower hits to be the dominant contribution in the slice. These requirements rely on several variables aiming at separating EM showers from single-particle tracks, i.e. shr\_score, shrmoliereavg, trkfit, subcluster. 
+
+At this stage, most of the selected events contain neutrino-induced electromagnetic activity. Thus, the main background left to tackle is  $\pi^0$ events. For $\pi^0$ rejection, we employ a series of requirements based on the different topology and energy deposition of electrons and photons. We first require the presence of only one shower-like PFParticle starting at a short distance from the track start in the event. Then, we require that the energy loss at the start of the electron shower is be compatible with a single MIP. Many dEdx variable definitions are possible, and information from all TPC planes can be used. However, due to detector and reconstruction limitations, there is not a single definition that provides a sharp separation between electrons and photons. In order to obtain a good background rejection without large efficiency losses, we choose to apply a loose MIP cut on two different dEdx definitions (described in Sec.~\ref{sec:nueselection:variables}). The loose MIP requirement enforces that there is at least one hit in the collection plane in the probed range, and that the dEdx is not consistent with two or more MIPs in any plane. Finally, the single shower requirement is reinforced with a 2nd shower veto based on clusters in the collection plane that are not matched to any PFParticle.
 
 The last cut aims at rejecting misreconstructed events and requires that the track and shower are not aligned. For reference, the full list of cuts is in Table~\ref{tab:1eNp:boxcut}.
 
@@ -260,7 +262,7 @@ Misreconstruction & tksh\_angle $>$ -0.9 and tksh\_angle $<$ 0.7 \\
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width=0.45\textwidth]{1eNp/reco_e_01162020_box_RUN1.pdf}
-\caption{\label{fig:1eNp:box:RUN1}Box-cuts for \npsel channel.}
+\caption{\label{fig:1eNp:box:RUN1} Reconstructed energy spectrum for events passing the box-cuts for \npsel channel.}
 \end{center}
 \end{figure}
 
@@ -284,9 +286,9 @@ Misreconstruction & tksh\_angle $>$ -0.9 and tksh\_angle $<$ 0.7 \\
 
 Alternatively to the box cut approach, a selection based on Boosted Decision Tree (BDT) algorithms has been developed. This selection is expected to be the most sensitive to low-energy \nue events since BDTs are able to learn additional information from the data and return a response variable that is highly discriminating between signal and background. 
 
-\textcolor{red}{While the development of the BDT selection is fairly advanced, a few steps are needed before it is finalized. Current limitations are mainly related to the limited size of the samples that are available for training and to the ongoing calibration of the dEdx variables used in the BDT. The limited sample size can lead to overtraining and suboptimal performance, while the missing calibration can induce small data-MC disagreements.} 
+\emph{While the development of the BDT selection is fairly advanced, a few steps are needed before it is finalized. Current limitations are mainly related to the limited size of the samples that are available for training and to the ongoing calibration of the dEdx variables used in the BDT. The limited sample size can lead to overtraining and suboptimal performance, while the missing calibration can induce small data-MC disagreements.} 
 
-In part because of these limitation we deemed safer to consider only events that pass a loose set of cuts (Table~\ref{tab:1eNp:loosecut}) intended to reject events where one or more variables is clearly inconsistent with \nuecc interactions. The loose cuts are applied on top the of the preselection both before the BDT training and before the application of the BDT in the analysis. This selection enhances the relative population of \nuecc in the BNB overlay sample from about 1\% to more than 25\% (Fig.~\ref{fig:1eNp:loosesel}). In the final implementation of the BDT selection the loose selection cuts may be revisited or removed.
+Because of these limitations, we deemed safer to consider only events that pass a loose set of cuts (Table~\ref{tab:1eNp:loosecut}) intended to reject events where one or more variables is clearly inconsistent with \nuecc interactions. The loose cuts are applied on top the of the preselection both before the BDT training and before the application of the BDT in the analysis. This selection enhances the relative population of \nuecc in the BNB overlay sample from about 1\% to more than 25\% (Fig.~\ref{fig:1eNp:loosesel}). \emph{In the final implementation of the BDT selection, the loose selection cuts may be revisited or removed}.
 \begin{table}[h!]
 \centering
 \setlength{\tabcolsep}{10pt}
@@ -332,7 +334,7 @@ Two BDTs are trained separately to reject backgrounds with and without $\pi^0$ i
     \includegraphics[width=1.00\textwidth]{1eNp/bdt_var_rank.pdf}
     \caption{\label{fig:1eNp:bdt:var:rank}}
     \end{subfigure}
-\caption{\label{ffig:1eNp:bdt:var} BDT variables importance in terms of "total gain". dEdx variables are combined for different planes (note the "ALL" suffix). Left: total gain value. Right: ranking based on the total gain value (highest ranking=15, lowest=1).}
+\caption{\label{ffig:1eNp:bdt:var} BDT variables importance in terms of ``total gain" \textcolor{blue}{what's the total gain?}. dEdx variables are combined for different planes (note the ``ALL" suffix). Left: total gain value. Right: ranking based on the total gain value (highest ranking=15, lowest=1).}
 \end{center}
 \end{figure}
 
@@ -379,15 +381,15 @@ The resulting response in Run1 open data are shown in Figures~\ref{fig:1eNp:bdt:
 
 \subsubsection{Performance of \npsel selections}
 
-Figure~\ref{fig:1eNp:effpur:RUN1} shows the efficiency of the \npsel selections as a function of the neutrino energy and reports the corresponding intrinsic \npsel purity in the range 0.2$<$reco\_e$<$1.0 \si{\GeV}. The efficiency is already low at preselection level, especially for neutrino energies below 0.8 \si{\GeV}. This demonstrates how challenging it is to properly identify and reconstruct such events. The loose cuts then are able to improve the purity by one order of magnitude at the price of a 50\% reduction in efficiency. The BDT (box cut) selection then further improve the purity by a factor 7.4 (6.6) with a $\sim$30\% (50\%) reduction in efficiency. With the full 10.1e20 POT dataset, the expected number of MiniBooNE LEE signal events identified with the box cut selection is about 8, and increase to almost 11 with the BDT selection.
+Figure~\ref{fig:1eNp:effpur:RUN1} shows the efficiency of the \npsel selections as a function of the neutrino energy and reports the corresponding intrinsic \npsel purity in the reconstructed energy range [0.2, 1.0] \si{\GeV}. The efficiency is already low at preselection level, especially for neutrino energies below 0.8 \si{\GeV}. This demonstrates how challenging it is to properly identify and reconstruct such events. The loose cuts then are able to improve the purity by one order of magnitude at the price of a 50\% reduction in efficiency. The BDT (box cut) selection then further improve the purity by a factor 7.4 (6.6) with a $\sim$30\% (50\%) reduction in efficiency. With the full 10.1e20 POT dataset, the expected number of MiniBooNE LEE signal events identified with the box cut selection is about 8, and increase to almost 11 with the BDT selection.
 
-\textcolor{red}{Figures~\ref{fig:1eNp:box:RUN1} and \ref{fig:1eNp:bdt:RUN1} show that the background to the \npsel events is in large fraction constituted by single events with large weight. This due to the relatively small size of the inclusive BNB sample. Note instead the the $\pi^0$ backgrounds are smoother since they come from larger dedicated samples. Additional background samples have been produced by the collaboration and they currently being processed by us. We thus plan to revisit the box cut and BDT selections after such sample will become available and after a residual calibration is applied to the dEdx variables.}
+\emph{Figures~\ref{fig:1eNp:box:RUN1} and \ref{fig:1eNp:bdt:RUN1} show that the background to the \npsel events is in large fraction constituted by single events with large weight. This due to the relatively small size of the inclusive BNB sample. Note instead that the $\pi^0$ backgrounds are smoother since they come from larger dedicated samples. We are currently processing the additional background samples just produced by the collaboration. We thus plan to revisit the box cut and BDT selections after such samples will become available and after a residual calibration is applied to the dEdx variables.}
 
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[width=0.45\textwidth]{1eNp/effpur_1eNp_cut_bdt.pdf}
-\caption{\label{fig:1eNp:effpur:RUN1} Efficiency of different selections for true contained \npsel events. The legend quotes the purity of intrinsic \npsel in the range 0.2$<$reco\_e$<1.0$ GeV (where a possible MiniBooNE LEE signal is not considered).}
+\caption{\label{fig:1eNp:effpur:RUN1} Efficiency of different selections for true contained \npsel events. The legend quotes the purity of intrinsic \npsel in the reconstructed energy range [0.2, 1.0] \si{\GeV} (where a possible MiniBooNE LEE signal is not considered).}
 \end{center}
 \end{figure}
 
