--- a/main.tex
+++ b/main.tex
@@ -1170,9 +1170,10 @@ The distribution of the test statistic for the null and alternative hypothesis d
 \newpage
 \section{Conclusions and Outlook}
 
-\subsection{To-Do}
+\subsection{Remaining Steps in the Analysis}
+\par There are several known remaining steps to be completed by the analysis. We list them below, trying to give a timeline for each. 
 \begin{enumerate}
-    \item larger MC stats with select truth-level filters.
+    \item \textbf{MC Statistics} Larger MC statistics for specific background categories are needed to be able to better train the \npsel BDT as well as obtain a generally .
     \item apply common optical filter to simulation events. Important for Run3.
     \item finalize charge re-calibration for trk PID and shower dE/dx
     \item implement LLR-PID for e/gamma separation.
